mips branchTestBigInt negPtr generateVMWrapper
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox68 | --- | fixed |
People
(Reporter: qiaopengcheng-hf, Assigned: qiaopengcheng-hf)
References
Details
Attachments
(2 files, 2 obsolete files)
11.81 KB,
patch
|
Details | Diff | Splinter Review | |
47 bytes,
text/x-phabricator-request
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux mips64; rv:52.0) Gecko/20100101 Firefox/52.0
Steps to reproduce:
compiling the JS code on mips-linux
Actual results:
compiling the JS code on mips-linux, these functions:
branchTestBigInt, negPtr, generateVMWrapper
are not properly ported.
Expected results:
should compile sucessfully
Assignee | ||
Comment 1•6 years ago
|
||
Assignee | ||
Comment 2•6 years ago
|
||
Comment 3•6 years ago
|
||
Hi, please request the review+ before landing this.
Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Daniel Varga [:dvarga] from comment #3)
Hi, please request the review+ before landing this.
There is no selection for reviewer after review+.
Assignee | ||
Comment 5•6 years ago
|
||
Comment 6•6 years ago
|
||
This still needs to be reviewed by jdemoolj.
Comment 7•6 years ago
|
||
Please post patches using Phabricator nowadays, https://moz-conduit.readthedocs.io/en/latest/phabricator-user.html
Updated•6 years ago
|
Comment 8•6 years ago
|
||
qiaopengcheng, thank you for the patch. Please note that MIPS support may be dropped in the future.
Assignee | ||
Comment 9•6 years ago
|
||
(In reply to Mike Conca [:mconca] from comment #8)
qiaopengcheng, thank you for the patch. Please note that MIPS support may be dropped in the future.
Our company wants to maintains the mips and had expressed within the dev-tech-js-engine-internals@lists.mozilla.org
Assignee | ||
Comment 10•6 years ago
|
||
Fix functions: branchTestBigInt, negPtr, generateVMWrapper on MIPS.
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Assignee | ||
Comment 13•6 years ago
|
||
Bug 1544631 - part2: amend Bug-1544631 for fixing mips32.
Comment 14•6 years ago
|
||
Comment on attachment 9069168 [details]
Bug 1544631 - part2: amend Bug-1544631 for fixing mips32.
Revision D33402 was moved to bug 1556197. Setting attachment 9069168 [details] to obsolete.
Description
•