Bug 1544631 - Fix functions: branchTestBigInt, negPtr, generateVMWrapper on MIPS. r=jandem

Fix functions: branchTestBigInt, negPtr, generateVMWrapper on MIPS.

Differential Revision: https://phabricator.services.mozilla.com/D27658